--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ body {
 .profile-heading,
 .skill-heading,
 .experience-heading,
-.portfolio-heading,
+.portofolio-heading,
 .contact-heading {
     padding-top: 65px;
 }
@@ -205,16 +205,16 @@ body {
         0 21px 70px rgba(0, 0, 0, 0.08);
 }
 
-/* ==== Portfolio ==== */
-.portfolio-image-wrapper {
+/* ==== portofolio ==== */
+.portofolio-image-wrapper {
     position: relative;
 }
 
-.portfolio-img {
+.portofolio-img {
     border-radius: 10px;
 }
 
-.portfolio-img-overlay {
+.portofolio-img-overlay {
     position: absolute;
     border-radius: 10px;
     top: 0;
@@ -228,12 +228,12 @@ body {
     background-color: #7e22ce;
 }
 
-.portfolio-image-wrapper:hover .portfolio-img-overlay {
+.portofolio-image-wrapper:hover .portofolio-img-overlay {
     opacity: 0.8;
     cursor: pointer;
 }
 
-.portfolio-text-overlay {
+.portofolio-text-overlay {
     font-size: 20px;
     position: absolute;
     top: 45%;
@@ -244,7 +244,7 @@ body {
     text-align: center;
 }
 
-.portfolio-categories-overlay {
+.portofolio-categories-overlay {
     font-size: 14px;
     position: absolute;
     top: 61%;
@@ -255,12 +255,12 @@ body {
     text-align: center;
 }
 
-.portfolio-modal-tag {
+.portofolio-modal-tag {
     border: 1px solid #7e22ce;
     border-radius: 5px;
 }
 
-.portfolio-modal-btn {
+.portofolio-modal-btn {
     background-color: #7e22ce;
 }
 
