--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,6 +267,25 @@ body {
 
 /* Testimoni */
 .splide__arrow {
+    background-color: #7e22ce;
+    color: white;
+    border: 2px solid #7e22ce;
+    opacity: 100 !important;
+    transition: 0.2s ease-out;
+}
+
+.splide__arrow:hover {
+    background-color: transparent;
+    color: #7e22ce;
+    transition: 0.2s ease-out;
+}
+
+.splide__arrow:active {
+    background-color: #7e22ce;
+    color: white;
+    border: 2px solid #7e22ce;
+    opacity: 100 !important;
+    transition: 0.2s ease-in-out;
 }
 
 .splide__pagination__page {
