--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,14 @@
 html, body {
     overflow: hidden;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(22, 22, 22, 0.8);
+    z-index: 50000 !important;
 }
 
 html {
